fixed the scroll effect on small device

--- a/src/index.css
+++ b/src/index.css
@@ -106,5 +106,7 @@ body{
   body{
 
     overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
